# megawidget

./: MANIFEST.in  README.md  setup.cfg
docs/modules/: README.md
docs/modules/content/megawidget.__init__/: classes.md  constants.md  functions.md
docs/modules/content/megawidget.__main__/: classes.md  constants.md  functions.md
docs/modules/content/megawidget.choice/: README.md
docs/modules/content/megawidget.choice.__init__/: classes.md  constants.md  functions.md
docs/modules/content/megawidget.confirmation/: README.md
docs/modules/content/megawidget.confirmation.__init__/: classes.md  constants.md  functions.md
docs/modules/content/megawidget.error/: README.md
docs/reference/: README.md
docs/reference/content/: megawidget.__init__.md  megawidget.__main__.md  megawidget.choice.md  megawidget.confirm.md  megawidget.hooking.__init__.md  megawidget.hooking.ante_build_hook.md  megawidget.hooking.ante_release_hook.md  megawidget.hooking.post_build_hook.md  megawidget.hooking.post_release_hook.md  megawidget.pathentry.md  megawidget.scrollbox.md  megawidget.table.md  megawidget.toast.md  megawidget.tree.md
megawidget/: __init__.py  __main__.py  choice.py  confirm.py  pathentry.py  scrollbox.py  table.py  toast.py  tree.py
megawidget/choice/: __init__.py
megawidget/confirmation/: __init__.py
megawidget/pathfield/: __init__.py
megawidget/pyrustic_data/: build_report.json  hooking.json  release_info.json
megawidget/scrollbox/: __init__.py
megawidget/table/: __init__.py
megawidget/toast/: __init__.py
megawidget/tree/: __init__.py
(+48 files in other folders)
