[metadata]
name = megawidget
version = file: VERSION
url = https://github.com/pyrustic/megawidget
author = Pyrustic Evangelist
author_email = pyrustic@protonmail.com
maintainer = Pyrustic Evangelist
maintainer_email = pyrustic@protonmail.com
description = Collection of megawidgets to build GUIs with Python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    megawidgets
    tkinter
    gui
    collection
    desktop-application
    widget-collection
    pyrustic
    frontend
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    viewable
    tkutil

[options.entry_points]
console_scripts =
    megawidget = megawidget.__main__:main
